--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
  <head>
  <meta charset="utf-8">
  <link rel="stylesheet" href="styles/style.css">
- <title>[TITULO]</title>
+ <title>[HOME]</title>
  </head>
  <body>
  <p>Esto es un párrafo</p>
