--- a/page_a.html
+++ b/page_a.html
@@ -8,7 +8,16 @@
  <body>
  <p>Esto es un párrafo</p>
  <h1>Esto es un header</h1>
+<table>
+ <tr>
+ <td>1,1</td>
+ <td>1,2</td>
+ </tr>
+ <tr>
+ <td>2,1</td>
+ <td>2,2</td>
+ </tr>
+ </table>
 
-<img src="[https://images.unsplash.com/photo-1595433707802-6b2626ef1c91?q=80&w=1000&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxleHBsb3JlLWZlZWR8Mnx8fGVufDB8fHx8fA%3D%3D]"> 
  </body>
 </html>
