--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
  <link rel="stylesheet" href="styles/style.css">
  <title>[HOME]</title>
 
+<script src="scripts/script.js"></script
+
 link
 href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.cs
 s" rel="stylesheet">
