--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
  <link rel="stylesheet" href="styles/style.css">
  <title>[HOME]</title>
 
+<script src="scripts/script.js"></script
+
 link
 href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.cs
 s" rel="stylesheet">
@@ -16,6 +18,38 @@ in.js"></script>
 
  </head>
  <body>
+
+
+<img src="[https://images.unsplash.com/photo-1595433707802-6b2626ef1c91?q=80&w=1000&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxleHBsb3JlLWZlZWR8Mnx8fGVufDB8fHx8fA%3D%3D]">
+
+
+
+<nav class="navbar navbar-expand-sm bg-light">
+ <div class="container-fluid">
+ <ul class="navbar-nav">
+ <li class="nav-item">
+ <a class="nav-link" href="page_a.html">Page A</a>
+ </li>
+ <li class="nav-item">
+ <a class="nav-link" href="page_b.html">Page B</a>
+ </li>
+ </ul>
+ </div>
+ </nav>
+
+
+<table>
+ <tr>
+ <td>1,1</td>
+ <td>1,2</td>
+ </tr>
+ <tr>
+ <td>2,1</td>
+ <td>2,2</td>
+ </tr>
+ </table>
+
+
 
 
  <p>Esto es un párrafo</p>
